--- a/src/scss/_layouts/_diagram.scss
+++ b/src/scss/_layouts/_diagram.scss
@@ -15,7 +15,7 @@
   }
 
   @include minScreen(667px) {
-    padding: 0 29px 42px;
+    padding: 0 42px 29px;
   }
 
   @include minScreen(768px) {
